--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Survery</title>
+    <title>Survey</title>
 </head>
 <body>
     <h1>Hello Survey</h1>
 </body>
+
 </html>
