--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
             puppies?)</p>
         <hr class="my-4">
         <p>For real, though, if you don't like puppies, you'll probably never find love. Just sayin'</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="/survey" role="button">Learn more</a>
     </div>
 
 </body>
