--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,10 @@
             puppies?)</p>
         <hr class="my-4">
         <p>For real, though, if you don't like puppies, you'll probably never find love. Just sayin'</p>
-        <a class="btn btn-primary btn-lg" href="/survey" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="/survey" role="button">Take the Survey</a>
+    </div>
+    <div class="container">
+        <a href="/api/friends">API Friends List</a>
     </div>
 
 </body>
