fixed question typo

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -105,7 +105,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="q7">Tea cup chihuahuas make get pets because they're so tiny.
+                <label for="q7">Tea cup chihuahuas make great pets because they're so tiny.
                 </label>
                 <br>
                 <select id="q7">
